Re-fixed page horizontal overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,8 @@ html {
     font-family: Arial, sans-serif;
     background: linear-gradient(to bottom, #f4a0ff, #e8f0fe);
     color: #333;
+    overflow-x: hidden; /* Prevent horizontal overflow */
+
 }
 
 #navbar {
@@ -165,6 +167,7 @@ footer p {
 footer a {
     margin-left: 10px;
 }
+
 
 /* Form Styles */
 #fs-frm {
